# lvkit

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  ISSUES.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.claude/agents/: vi-converter.md
.claude/skills/: convert.md
.claude/skills/convert/: SKILL.md
.claude/skills/describe-vi/: SKILL.md
.claude/skills/explore-vi/: SKILL.md
.claude/skills/full-convert/: SKILL.md
.github/workflows/: publish.yml
agent-os/standards/: index.yml
data/: labview-api-scraped.json  primitives-codegen.json  vilib-vis-full.json  vilib-vis.json
data/drivers/: daqmx.json
data/openg/: _index.json  array.json  file.json  string.json  time.json
data/vilib/: _enums.json  _pending_terminals.json  _types.json  application-control.json  array.json  boolean.json  cluster.json  comparison.json  error-handling.json  file-io.json  numeric.json  string.json  structures.json  variant.json
docs/: ast-codegen-architecture.md  demo-script.md  fine-tuning-guide.md  graph-reference.md  highlight-reel.md  primitive-terminals.md  vi-xml-reference.md
docs/maintainers/: primitive-terminals.md
docs/standards/: index.yml
scripts/: analyze_openg.py  analyze_openg_graph.py  analyze_vi.py  ast_only.py  audit_unresolved.py  debug_dataflow.py  dump_primitive_context.py  generate_docs.py  generate_driver_data.py  generate_python.py  match_terminals.py  populate_vilib.py  skeleton_only.py  sync_skills.sh
src/lvkit/: __init__.py  _data.py  cli.py  extractor.py  labview_error.py  labview_error_codes.py  models.py  pipeline.py  primitive_resolver.py  project_store.py  structure.py  terminal_collector.py  vilib_resolver.py
src/lvkit/docs/: utils.py  (+3 more)
src/lvpy/: __init__.py  _data.py  analysis.py  cli.py  constants.py  converter.py  extractor.py  frontpanel.py  graph_types.py  labview_error_codes.py  memory_graph.py  models.py  naming.py  pipeline.py  primitive_resolver.py  project_store.py  structure.py  terminal_collector.py  type_defaults.py  types.py  vilib_resolver.py
src/vipy/: __init__.py  _data.py  analysis.py  blockdiagram.py  cli.py  constants.py  converter.py  cypher.py  enum_resolver.py  errors.py  explorer.py  extractor.py  frontend.py  frontpanel.py  graph.py  graph_types.py  labview_error.py  labview_error_codes.py  llm.py  llm_pipeline.py  llm_provider.py  memory_graph.py  parser.py  pipeline.py  primitive_resolver.py  primitives.json  primitives_lookup.py  project_store.py  structure.py  summarizer.py  terminal_collector.py  type_defaults.py  types.py  vilib_resolver.py
tests/: conftest.py  helpers.py  test_ast_builder.py  test_ast_optimizer.py  test_case_codegen.py  test_case_parser.py  test_codegen_context.py  test_compound_codegen.py  test_condition_builder.py  test_constant_decoding.py  test_diff.py  test_driver_codegen.py  test_dynamic_dispatch.py  test_e2e_codegen.py  test_error_codegen.py  test_error_handling.py  test_graceful_degradation.py  test_in_place_codegen.py  test_loop_codegen.py  test_lvpy.py  test_memory_graph.py  test_naming.py  test_new_codegen.py  test_parallel_codegen.py  test_parser.py  test_parser_regression.py  test_project_store.py  test_sequence.py  test_soft_codegen.py  test_type_driven_fixes.py  test_type_fields.py  test_type_loading.py  test_type_mapping.py  test_vi_graph.py  test_vipy.py
(+302 files in other folders)
