[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vipy"
version = "0.1.0"
description = "Convert LabVIEW VIs to Python code without a LabVIEW license"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ryan Fried" }
]
dependencies = [
    "pylabview",
    "networkx",
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vipy = "vipy.cli:main"
vipy-mcp = "vipy.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
neo4j = [
    "neo4j",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vipy"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
