[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvkit"
version = "0.2.0"
description = "Understand and convert LabVIEW VIs to Python without a LabVIEW license"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Pragmatest" }
]
keywords = [
    "labview",
    "vi",
    "code-generation",
    "static-analysis",
    "ast",
    "mcp",
    "ni",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pylabview",
    "networkx",
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
visualize = ["pyvis"]

[project.urls]
Repository = "https://github.com/pragmatest-dev/lvkit"
Issues = "https://github.com/pragmatest-dev/lvkit/issues"

[project.scripts]
lvkit = "lvkit.cli:main"
lvkit-mcp = "lvkit.mcp.server:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
# Bundled JSON data and skill templates live INSIDE the package at
# src/lvkit/data/ and src/lvkit/skill_templates/ so they ride along with
# the wheel automatically. The resolvers and `lvkit setup` load
# them via paths relative to the package or via importlib.resources.
packages = ["src/lvkit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lvkit",
    "tests",
    "scripts",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    ".pre-commit-config.yaml",
]
exclude = [
    "samples",
    "outputs",
    "docs/labview_ref_manual.txt",
    "docs/*.pdf",
    ".lvkit",
    ".tmp",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
